--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "chatbox",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
